--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
+    "node-cron": "^2.0.3",
     "request": "^2.88.2",
     "validator": "^13.5.2"
   },
